[package]
name = "test-parse-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4.22"
property-rs = { git = "https://github.com/tmaru0090/property-rs", version = "0.1.0" }
[features]
asm = []
decode = []
