[package]
name = "test-parse-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4.22"
property-rs = { git = "https://github.com/tmaru0090/property-rs", version = "0.1.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"
[features]
asm = []
decode = []
