[package]
name = "test-parse-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
colored = "2.1.0"
env_logger = "0.11.5"
hostname = "0.4.0"
indexmap = "2.5.0"
log = "0.4.22"
property-rs = { git = "https://github.com/tmaru0090/property-rs", version = "0.1.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"
uuid = { version = "1.10.0", features = ["v4"] }
whoami = "1.5.2"
[features]
asm = []
decode = []
